This is long and boring...

--- a/www/login.html
+++ b/www/login.html
@@ -24,11 +24,11 @@
 
 
 
-  <div style="text-align: center; margin-top: 200px">
-    <h1 style="font-size:250%; color:#2979ff; position:relative; top:-3em">
+  <div style="text-align: center; margin-top: 100px">
+    <h1 style="font-size:250%; color:#2979ff; position:relative; top:-.6em">
       grafitti.IO
     </h1>
-    <p style="position:relative; top:-4em; font-size:140%; color:grey; margin:1em">the marketing platform for marketing people, their brands and their passion</p>
+    <p style="position:relative; top:-.7em; font-size:140%; color:grey; margin:1em">the marketing platform for marketing people, their brands and their passion</p>
     <p>
       <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
     </p>
@@ -36,7 +36,7 @@
       <ons-input id="password" placeholder="Password" type="password" modifier="underbar"></ons-input>
     </p>
     <p>
-      <ons-button onclick="login()">Sign in</ons-button>
+      <ons-button modifier="large" style="width:70%; margin-right:auto; position:relative; top:4em; margin-left:auto" onclick="login()">Sign in</ons-button>
     </p>
   </div>
 </ons-page>
